Fix overlapping footer & credits. Props @laurelfulford.

--- a/stylesheets/_site-branding.scss
+++ b/stylesheets/_site-branding.scss
@@ -107,6 +107,7 @@
 	
 		.social-navigation {
 			max-width: 100% - $credits_width;
+			order: 2;
 		}
 	}
 	
